remove catfact
