# config/swagger/rust-backend.yaml
@@ -26,26 +26,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/HealthCheckResponse'
   
-  /catfact:
-    get:
-      summary: Random cat fact
-      description: Returns a random fact about cats
-      tags:
-        - data
-      responses:
-        '200':
-          description: Random cat fact
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Data'
-        '500':
-          description: Internal server error
-          content:
-            text/plain:
-              schema:
-                type: string
-  
   /pet/{id}:
     get:
       summary: Get pet by ID
